in the process of changing code architecture to be more robust, also changing it to reflect my new API backend functionality

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
-    "name": "My",
+    "scheme": "https",
+    "name": "My Artists",
     "slug": "My-Artists-App",
     "privacy": "public",
     "sdkVersion": "36.0.0",
