--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.10",
+    "Base64": "^1.1.0",
     "expo": "~36.0.0",
+    "expo-secure-store": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
@@ -22,7 +25,9 @@
     "react-navigation": "^4.3.1",
     "react-navigation-stack": "^2.3.1",
     "react-navigation-tabs": "^2.8.4",
-    "react-redux": "^7.2.0"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
