--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/native": "^5.0.10",
+    "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.11",
     "Base64": "^1.1.0",
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "expo-secure-store": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -22,11 +27,15 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.1",
+    "react-native-xml2js": "^1.0.3",
+    "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.1",
     "react-navigation-tabs": "^2.8.4",
     "react-redux": "^7.2.0",
+    "react-xml-parser": "^1.1.6",
     "redux": "^4.0.5",
+    "redux-storage": "^4.1.2",
+    "redux-storage-engine-reactnativeasyncstorage": "^1.0.7",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
