--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "expo-secure-store": "~8.0.0",
+    "install": "^0.13.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-native-xml2js": "^1.0.3",
     "react-navigation": "^4.3.7",
