Concerts filters Modal, Terms of Use, Fixed accessToken expiration bug, refractored some of the 3rd party API calls code. (SpotifyFetches, ConncertEffects, SeatgeekEffectsm)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/slider": "^3.0.0",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
@@ -22,11 +23,16 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-elements": "^1.2.7",
+    "react-native-elements": "^2.0.2",
+    "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-google-places": "^3.1.2",
+    "react-native-google-places-autocomplete": "^1.7.2",
+    "react-native-places-input": "^1.1.5",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-slider": "^0.11.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
