--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-google-places": "^3.1.2",
     "react-native-google-places-autocomplete": "^1.7.2",
+    "react-native-map-link": "^2.7.10",
     "react-native-places-input": "^1.1.5",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
