--- a/app.json
+++ b/app.json
@@ -27,8 +27,10 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app asks users for their location to automatically find concerts near them. Otherwise, users can manually search for concerts via the google places autocomplete API",
         "LSApplicationQueriesSchemes": [
-          "comgooglemaps"
+          "comgooglemaps",
+          "applemaps"
         ]
       }
     }
