--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "expo-secure-store": "~8.0.0",
+    "expo-status-bar": "^1.0.2",
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
