--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-xml2js": "^1.0.3",
