--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^1.3.0",
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "Base64": "^1.1.0",
-    "expo": "~36.0.0",
-    "expo-location": "~8.0.0",
-    "expo-permissions": "~8.0.0",
-    "expo-secure-store": "~8.0.0",
-    "expo-status-bar": "^1.0.2",
+    "expo": "^38.0.0",
+    "expo-auth-session": "~1.4.0",
+    "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
+    "expo-secure-store": "~9.0.1",
+    "expo-status-bar": "^1.0.0",
+    "expo-web-browser": "~8.3.1",
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
-    "react": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
@@ -38,7 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true
 }
