--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^5.2.11",
     "Base64": "^1.1.0",
     "expo": "^38.0.0",
+    "expo-app-auth": "~9.1.1",
     "expo-auth-session": "~1.4.0",
+    "expo-linking": "^1.0.3",
     "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
@@ -36,7 +38,8 @@
     "react-native-xml2js": "^1.0.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "search-params": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
