Make app work for iPad and look good

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^38.0.0",
     "expo-app-auth": "~9.1.1",
     "expo-auth-session": "~1.4.0",
+    "expo-device": "~2.2.1",
     "expo-linking": "^1.0.3",
     "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
