--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
       "ios",
       "android"
     ],
-    "version": "1.2.0",
+    "version": "1.3.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -28,11 +28,12 @@
     "userInterfaceStyle": "dark",
     "ios": {
       "bundleIdentifier": "xilernet.myartists",
-      "buildNumber": "1.2.0",
+      "buildNumber": "1.3.0",
       "supportsTablet": true,
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app asks users for their location to automatically find concerts near them. Otherwise, users can manually search for concerts via the google places autocomplete API",
         "LSApplicationQueriesSchemes": [
+          "spotify",
           "comgooglemaps",
           "applemaps"
         ]
